# Course-Compass

./: app.py  pyproject.toml
.streamlit/: secrets.toml
schemas/: Course.py  Discover.py  __init__.py
